cmake_minimum_required(VERSION 3.22)
project(A4_11153043)

set(CMAKE_CXX_STANDARD 14)

add_executable(A4_11153043 Library.cpp cmake-build-debug/PaperBook.cpp cmake-build-debug/PaperBook.h cmake-build-debug/AudioBook.cpp cmake-build-debug/AudioBook.h cmake-build-debug/Date.cpp cmake-build-debug/Date.h cmake-build-debug/Book.cpp cmake-build-debug/Book.h cmake-build-debug/eBook.cpp cmake-build-debug/eBook.h cmake-build-debug/Member.cpp cmake-build-debug/Member.h)
